--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             return R * c;
         }
 
+        console.log("これからif文の中に入ります。");
+
+        
         // 位置情報を取得し、モデルを表示するかどうかを判定
         if ("geolocation" in navigator) {
             connsole.log("if文の中に入りました。");
