--- a/index.html
+++ b/index.html
@@ -64,12 +64,29 @@
         // 位置情報を取得し、モデルを表示するかどうかを判定
         if ("geolocation" in navigator) {
             console.log("if文のなかに入りました。");
-            navigator.geolocation.watchPosition(function(position) {
-                // 位置情報の取得に成功した場合の処理
+   navigator.geolocation.watchPosition(function(position) {
+
+                console.log("functionの中に入りました。");
+                const userLatitude = position.coords.latitude;
+                const userLongitude = position.coords.longitude;
+
+                // 指定の位置との距離を計算
+                const distance = calculateDistance(userLatitude, userLongitude, targetLatitude, targetLongitude);
+                 
+                // 100メートル以内にいる場合にモデルを表示
+                if (distance <= 20) {
+                    modelEntity.setAttribute('gps-entity-place', `latitude: ${targetLatitude}; longitude: ${targetLongitude};`);
+                    modelEntity.setAttribute('visible', 'true');
+                    console.log("指定位置に近いため、モデルを表示します。");
+                    alert("指定位置に近いため、モデルを表示します。");
+                } else {
+                    console.log("指定位置から離れているため、モデルは表示されません。");
+                    alert("指定位置から離れているため、モデルは表示されません。");
+                }
             }, function(error) {
-                console.log("位置情報の取得に失敗しました:", error);
-                alert("位置情報の取得に失敗しました:" + error.message);
-            }, { enableHighAccuracy: true, maximumAge: 0, timeout: 100 });
+                console.log("位置情報の取得に失敗しました:");
+                alert("位置情報の取得に失敗しました:", error);
+            }, { enableHighAccuracy: true, maximumAge: 0, timeout: 1000 });
 
         } else {
             console.log("このブラウザでは位置情報がサポートされていません");
